# PKM

./: .env.example  .gitignore  README.md  docker-compose.yml  mcp_config.example.json  mcp_server.py  pyproject.toml  quick_start.sh  requirements.txt  test_atomic_agent.py
docs/: DOCKER_SETUP.md  INSTALLATION.md  MCP_SERVER_SETUP.md  Obsidian-to-GraphDB-Implementation.md  QUICKSTART_DOCKER.md  QUICKSTART_UV.md  USAGE_GUIDE.md  UV_SETUP.md
scripts/: start_neo4j.sh  stop_neo4j.sh
src/: atomic_note_agent.py  entity_extraction_simple.py  graph_db.py  kg_reasoning.py  obsidian_loader.py
tests/: regenerate_markdown.py  test_atomic_agent.py  test_entity_extraction.py  test_graph_import.py  test_kg_reasoning.py
