[project]
name = "pkm-knowledge-graph"
version = "1.0.0"
description = "개인 Knowledge Graph (PKM) 시스템 - Obsidian 노트를 지식 그래프로 변환"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.1",
    "google-generativeai",
    "python-dotenv",
    "neo4j>=5.14.0",
    "fastmcp",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

